# como_quickjs

./: .gitignore  CMakeLists.txt  README.md  README_quickjs.md  qjs.c  quickjs-libc.c  quickjs.c
src/: LAMBDA_FOR_CLASS_INIT.inc  LAMBDA_FOR_METHOD.inc  como_bridge.cpp  como_bridge.h  como_pybind.cpp  como_pytypes.h  como_quickjs.cpp  como_quickjs.h  utils.cpp  utils.h
